--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,17 @@ after_success:
   - docker push  pitbull959/multi-server
   - docker push  pitbull959/multi-worker
 
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "multi-docker"
+  env: "MultiDocker-env "
+  bucket_name: "elasticbeanstalk-us-east-1-854531375004"
+  bucket_path: "docker-multi"
+  on: 
+    branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: 
+    secure: "$AWS_SECRET_KEY"
 
 
