--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
-  app: "multi-docker"
-  env: "MultiDocker-env "
+  app: "mmm"
+  env: "Mmm-env"
   bucket_name: "elasticbeanstalk-us-east-1-854531375004"
   bucket_path: "docker-multi"
   on: 
