--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -3,6 +3,8 @@ server {
 
     location / {
         root /usr/share/nginx/html;
-        index index.html index.htm
+        index index.html index.htm;
     }
 }
+
+
