--- a/.travis.yml
+++ b/.travis.yml
@@ -10,28 +10,26 @@ script:
 
 after_success:
   - docker build -t pitbull959/multi-client ./client
-  - docker build -t pitbull959/multi-nginx  ./nginx
+  - docker build -t pitbull959/multi-nginx ./nginx
   - docker build -t pitbull959/multi-server ./server
   - docker build -t pitbull959/multi-worker ./worker
-  # Login in to docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID"  --password-stdin
-  # Push to docker hub
-  - docker push  pitbull959/multi-client
-  - docker push  pitbull959/multi-nginx
-  - docker push  pitbull959/multi-server
-  - docker push  pitbull959/multi-worker
+  # Log in to the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push them to docker hub
+  - docker push pitbull959/multi-client
+  - docker push pitbull959/multi-nginx
+  - docker push pitbull959/multi-server
+  - docker push pitbull959/multi-worker
 
 deploy:
   provider: elasticbeanstalk
-  region: "us-east-1"
-  app: "mmm"
-  env: "Mmm-env"
-  bucket_name: "elasticbeanstalk-us-east-1-854531375004"
-  bucket_path: "docker-multi"
-  on: 
+  region: us-west-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-west-1-306476627547
+  bucket_path: docker-multi
+  on:
     branch: master
-  access_key_id: "$AWS_ACCESS_KEY"
-  secret_access_key: 
-    secure: "$AWS_SECRET_KEY"
-
-
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
